--- a/hacker-snooze/css/site.css
+++ b/hacker-snooze/css/site.css
@@ -3,6 +3,13 @@
 body {
   font-family: Arimo, sans-serif;
   margin: 8px 7.5vw;
+  background-image: linear-gradient(
+    to right,
+    #87cefa,
+    #f2b6f6,
+    #f2b6f6,
+    #87cefa
+  );
 }
 
 h1 {
@@ -29,7 +36,6 @@ a:hover {
   text-decoration: underline;
 }
 
-
 /* Site layout */
 
 /* This is the basic box that the main part of the page goes into */
@@ -38,12 +44,15 @@ a:hover {
   flex-direction: column;
   align-self: center;
   background-color: #f6f6ef;
+  width: 80%;
+  height: auto; /* Adjusts height based on content, use a specific value for fixed height */
+  /* Adds margin to the top and bottom, auto for left and right for centering */
+  padding: 20px;
 }
 
 .hidden {
   display: none;
 }
-
 
 /* Forms */
 
@@ -58,7 +67,8 @@ form > * {
 }
 
 form label {
-  font-size: 0.9rem;
+  font-size: 1rem;
+  font-weight: bold;
   font-weight: 700;
   display: inline-block;
   width: 3.5rem;
@@ -106,7 +116,6 @@ form > hr {
   width: 70px;
 }
 
-
 /* responsive queries for tightening things up for mobile. */
 
 @media screen and (max-width: 576px) {
@@ -120,4 +129,15 @@ form > hr {
     max-width: 900px;
     margin: 8px auto;
   }
+}
+#login-form,
+#signup-form {
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Consistent text shadow with form elements */
+}
+
+h4 {
+  font-size: 1.25rem; /* Increased font size */
+  margin-bottom: 1rem; /* Added space below the heading */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Consistent text shadow with form elements */
 }
