--- a/flask-blogly/templates/new_post_form.html
+++ b/flask-blogly/templates/new_post_form.html
@@ -14,10 +14,21 @@
             <label for="content">Content</label>
             <textarea name="content" id="content" class="form-control" required rows="5"></textarea>
         </div>
-        <a href="/" class="btn btn-info">Cancel</a>
+<div class="form-group">
+    <label>Tags:</label>
+    {% for tag in tags %}
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" name="tags[]" value="{{ tag.id }}" id="tag_{{ tag.id }}">
+        <label class="form-check-label" for="tag_{{ tag.id }}">
+            {{ tag.name }}
+        </label>
+    </div>
+    {% endfor %}
+</div>
+<a href="{{ url_for('user_details', user_id=user.id) }}" class="btn btn-info">Cancel</a>
+
         <button type="submit" class="btn btn-success">Add</button>
-<!--        &lt;!&ndash; Add a new 'Add Post' navigation button &ndash;&gt;-->
-<!--        <a href="{{ url_for('show_add_form', user_id=user.id) }}" class="btn btn-primary">Go to Add Post</a>-->
+
     </form>
 </div>
 {% endblock %}
