--- a/flask-blogly/templates/post_details.html
+++ b/flask-blogly/templates/post_details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>User Profile</title>
+    <title>Post Details</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         h2 {
@@ -29,6 +29,13 @@
                 <h2>{{ post.title}} </h2>
    <h3>{{post.content}}</h3>
                 <h4>By {{user.first_name}} {{user.last_name}}</h4>
+                <h4>Tags:
+                {% for tag in post.tags %}
+                    <span class="badge badge-primary">{{ tag.name }}</span>
+                {% else %}
+                    No tags
+                {% endfor %}
+            </h4>
                 <div>
                     <a href="{{ url_for('user_details', user_id=user.id) }}" class="btn btn-outline-info mr-2">Cancel</a>
                     <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btn btn-primary mr-2">Edit</a>
